# suturo_planning

./: .gitignore  .gitmodules  README.md  bulletworld funktionen  cram-bulletworld-cheat-sheet  dependencies.rosinstall  install.rosinstall  planning_dependency.rosinstall  planning_ws.rosinstall  requirements.txt  safe
cleanup-demo/: CMakeLists.txt  cleanup-demo.asd  package.xml
cleanup-demo/src/: cleanup_bw.lisp  demo.lisp  execute-cleanup.lisp  init.lisp  package.lisp
cleanup_demo/: CMakeLists.txt  cleanup-demo.asd  package.xml
cleanup_demo/src/: .#execute-cleanup.lisp  cleanup-bw.lisp  cleanup_bw.lisp  execute-cleanup-new.lisp  execute-cleanup.lisp  execute-cleanup.lisp~  init.fasl  init.lisp  new-execute-cleanup.lisp  package.lisp
common_function/: CMakeLists.txt  common-function.asd  package.xml
common_function/src/: common-plans.lisp  designators.lisp  high-level-plans.lisp  mid-level-plans.lisp  package.lisp
common_functions/: CMakeLists.txt  common-functions.asd  package.xml
common_functions/src/: .#high-level-plans.lisp  .#knowledge-functions.lisp  .#manipulation-functions.lisp  designators.lisp  high-level-plans.lisp  knowledge-functions.lisp  manipulation-functions.lisp  navigation-functions.lisp  navigation-functions.lisp~  nlp-functions.lisp  package.lisp  perception-functions.lisp  process-modules.lisp  safety-check.lisp  select-process-modules.lisp  time-measurement.lisp  tts-functions.lisp
common_plans/: CMakeLists.txt  common-plans.asd  package.xml
common_plans/src/: common-plans.lisp  grasp-object.lisp  high-level-plans.lisp  high-level.lisp  init.lisp  next-object.lisp  package.lisp  place-object.lisp  poiScan.lisp  process-modules.lisp  process_modules.lisp  select-process-modules.lisp
deprecated/src/: deprecated.lisp
emacs_config/: fill-column-indicator.el  hl-todo.el  repl-config.el
execute_milestone1_demo/src/: package.lisp
execute_milestone_02_demo/: CMakeLists.txt  execute-milestone-02-demo.asd  package.xml
extended_cleanup_demo/: CMakeLists.txt  extended-cleanup-demo.asd  package.xml
extended_cleanup_demo/src/: init.lisp  package.lisp  (+1 more)
go_get_it_demo/: CMakeLists.txt  go-get-it-demo.asd  package.xml
go_get_it_demo/src/: .#execute-go-get-it.lisp  execute-go-get-it.lisp  execute-go-get-it.lisp~  go-get-it-bw.lisp  init.lisp  package.lisp
got_get_it_demo/: CMakeLists.txt  cleanup-demo.asd  package.xml
grocery-demo/: CMakeLists.txt  grocery-demo.asd  package.xml
grocery_demo/: CMakeLists.txt  grocery-demo.asd  package.xml
low_level_interfacing/: CMakeLists.txt  low-level-interfacing.asd  package.xml
low_level_interfacing/src/: #knowledge-client.lisp#  #robosherlock-client-object.lisp#  #robosherlock-client-plane.lisp#  .#knowledge-client.lisp  can-manipulate-action-client.lisp~  global-planner.lisp  global-planner.lisp~  grasp-action-client.lisp  knowledge-client.lisp  knowledge-door-client.lisp  knowledge-insertion-client.lisp  knowledge-object-client.lisp  knowledge-surface-client.lisp  knowledge-tts-client.lisp  make-nav-plan-action-client.lisp  make-nav-plan-action-client.lisp~  make-plan-action-client.lisp  marker-publisher.lisp  move-gripper-client.lisp  navigation-action.lisp  nlg-action-client.lisp  nlg-action-client.lisp~  nlg-interface.lisp  nlg-interface.lisp~  nlp-subscriber.lisp  obstacle-map-subscriber.lisp  open-door-client.lisp  open-door-client.lisp~  open-drawer-action-client.lisp  package.lisp  perceive-action-client.fasl  perceive-action-client.lisp  perception-trigger-client.lisp  place-action-client.lisp  poi-client.lisp  poi-remover.lisp  poi-remover.lisp~  poi-search.lisp  poi-search.lisp~  process-modules.lisp  (+12 more)
planning_milestone/: CMakeLists.txt  README.md  package.xml  planning-milestone.asd
planning_simulator/: CMakeLists.txt  package.xml  planning-simulator.asd
suturo_demos/: package.xml  suturo-demos.asd
suturo_real_hsr_pm/: suturo-real-hsr-pm.asd
wipe/: CMakeLists.txt  package.xml  wipe-demo.asd
(+143 files in other folders)
